--- a/BookingSystem/Phase2/Dockerfile
+++ b/BookingSystem/Phase2/Dockerfile
@@ -1,5 +1,8 @@
+# Use Nginx to serve the static files
 FROM nginx:alpine
-RUN rm -rf /usr/share/nginx/html/*
-COPY ./app /usr/share/nginx/html/
+
+# Copy the contents of your 'app' folder into the Nginx html directory
+COPY ./app /usr/share/nginx/html
+
+# Expose port 80
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
